--- a/src/main/resources/templates/DoctorsList.html
+++ b/src/main/resources/templates/DoctorsList.html
@@ -72,25 +72,57 @@
                     <ul class="pagination justify-content-center mt-4">
                         <!-- Previous Button -->
                         <li class="page-item" th:classappend="${currentPage == 0} ? 'disabled'">
-                            <a class="page-link" th:href="@{/DoctorsList(keyword=${keyword}, page=${currentPage - 1}, size=${size})}" aria-label="Previous">
+                            <a class="page-link" th:href="@{/admin(keyword=${keyword}, page=${currentPage - 1}, size=${size})}" aria-label="Previous">
                                 &laquo; Previous
                             </a>
                         </li>
 
                         <!-- Page Numbers -->
                         <li th:each="page, status : ${pages}" th:classappend="${currentPage == status.index} ? 'active'">
-                            <a class="page-link" th:href="@{/DoctorsList(keyword=${keyword}, page=${status.index}, size=${size})}" th:text="${status.index + 1}"></a>
+                            <a class="page-link" th:href="@{/admin(keyword=${keyword}, page=${status.index}, size=${size})}" th:text="${status.index + 1}"></a>
                         </li>
 
                         <!-- Next Button -->
                         <li class="page-item" th:classappend="${currentPage == pages.length - 1} ? 'disabled'">
-                            <a class="page-link" th:href="@{/DoctorsList(keyword=${keyword}, page=${currentPage + 1}, size=${size})}" aria-label="Next">
+                            <a class="page-link" th:href="@{/admin(keyword=${keyword}, page=${currentPage + 1}, size=${size})}" aria-label="Next">
                                 Next &raquo;
                             </a>
                         </li>
                     </ul>
                 </nav>
             </div>
+
+
+<script>
+    fetch('/Consultation/submit', {
+    method: 'POST',
+    headers: { 'Content-Type': 'application/json' },
+    body: JSON.stringify({
+        patient: { id: 1 },  // Remplace par l'ID du patient connecté
+        doctor: { id: 2 },   // Remplace par l'ID du médecin choisi
+        date: "2025-03-01",
+        time: "10:00"
+    })
+})
+    .then(response => response.json())
+    .then(data => {
+        if (data.message.includes("Vous avez déjà une consultation")) {
+            Swal.fire({
+                icon: 'error',
+                title: 'Erreur',
+                text: data.message
+            });
+        } else {
+            Swal.fire({
+                icon: 'success',
+                title: 'Succès',
+                text: data.message
+            }).then(() => {
+                window.location.reload();
+            });
+        }
+    });
+</script>
 
 </body>
 </html>
