--- a/src/main/resources/templates/Home.html
+++ b/src/main/resources/templates/Home.html
@@ -68,6 +68,11 @@
             <span th:text="${#authentication.name != null} ? ' Logout' : ' Login'"></span>
           </a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link" th:href="@{/profile}">
+            <i class="bi bi-person-circle"></i> Profile
+          </a>
+        </li>
       </ul>
     </div>
   </div>
