patient must book only one apoointment with x doctor

--- a/src/main/resources/templates/ConsultationPatient.html
+++ b/src/main/resources/templates/ConsultationPatient.html
@@ -234,8 +234,7 @@
                     <div class="mb-4">
                         <label class="form-label"><i class="fas fa-check me-2"></i>Status</label>
                         <select class="form-control" name="status" th:value="${consultation.status}">
-                            <option value="Scheduled">Scheduled</option>
-                            <option value="Completed">Completed</option>
+                            <option value="Completed">PENDING_PAYMENT</option>
                             <option value="Canceled">Canceled</option>
                         </select>
                     </div>
