--- a/src/main/resources/templates/appointmentForm.html
+++ b/src/main/resources/templates/appointmentForm.html
@@ -124,7 +124,7 @@
                         </div>
                         <div class="col-md-6">
                             <label class="form-label">Birth Date</label>
-                            <input type="date" class="form-control" th:field="*{patient.birthDate}" readonly>
+                            <input type="date" class="form-control" th:field="*{patient.birthDate}" >
                         </div>
                         <div class="col-md-6">
                             <label class="form-label">Contact Number</label>
