--- a/src/main/resources/templates/DoctorsListForPatient.html
+++ b/src/main/resources/templates/DoctorsListForPatient.html
@@ -78,6 +78,9 @@
                 </button>
             </form>
         </div>
+        <div th:if="${errorMessage}" class="alert alert-danger" role="alert">
+            <span th:text="${errorMessage}"></span>
+        </div>
 
         <!-- Main Content -->
         <div class="container" style="padding-top: 80px;">
