profile page fixed

--- a/src/main/resources/templates/doctorhome.html
+++ b/src/main/resources/templates/doctorhome.html
@@ -199,7 +199,7 @@
                 </th:block>
             </main>
 
-            <!-- ✅ Popup de succès -->
+
             <div id="successPopup" style="display: none;
         position: fixed;
         top: 30%;
@@ -212,12 +212,12 @@
         box-shadow: 0 5px 15px rgba(0,0,0,0.3);
         text-align: center;
         z-index: 1000;">
-                <h4 style="color: #28a745;">✅ Paiement effectué avec succès</h4>
+                <h4 style="color: #28a745;"> Paiement effectué avec succès</h4>
                 <br>
                 <button onclick="redirectToDoctorHome()" class="btn btn-primary">Retourner</button>
             </div>
 
-            <!-- ✅ Overlay sombre -->
+
             <div id="popupOverlay" style="display: none;
         position: fixed;
         top: 0;
@@ -228,7 +228,7 @@
         z-index: 999;"></div>
         </div>
 
-        <!-- ✅ JavaScript -->
+
         <script>
             // Fonction pour afficher le popup de succès
             function showSuccessPopup() {
